# KISS

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
experiments/: CMakeLists.txt
experiments/SFMLImGui/: CMakeLists.txt
src/: main.cpp
src/KissEditor/: CMakeLists.txt  KT_Editor.h  KT_ImGui.h
src/KissEditor/ImGui/: Profiler.cpp  Profiler.h
src/Mosou/: CMakeLists.txt  MC_Game.cpp  MC_Game.h
src/Musou/: CMakeLists.txt  MC_BounceOnBorderSystem.cpp  MC_BounceOnBorderSystem.h  MC_BounceOnCollisionSystem.cpp  MC_BounceOnCollisionSystem.h  MC_Game.cpp  MC_Game.h  MC_MoveSystem.cpp  MC_MoveSystem.h
src/kiss/: CMakeLists.txt  KC_ApplyActiveCameraSystem.cpp  KC_ApplyActiveCameraSystem.h  KC_Assert.h  KC_Camera.h  KC_Canvas.h  KC_CanvasRectanglePalette.h  KC_CircleRenderSystem.cpp  KC_CircleRenderSystem.h  KC_CircleRenderer.h  KC_ClearCanvasSystem.cpp  KC_ClearCanvasSystem.h  KC_CollisionEvent.h  KC_CollisionEventSet.cpp  KC_CollisionEventSet.h  KC_ComponentArray.h  KC_ComponentManager.h  KC_ComponentsRegistry.h  KC_Defines.h  KC_DetectCollisionSystem.cpp  KC_DetectCollisionSystem.h  KC_DrawCanvasSystem.cpp  KC_DrawCanvasSystem.h  KC_DrawCircleSystem.cpp  KC_DrawCircleSystem.h  KC_DrawSystem.h  KC_Entity.h  KC_EntityManager.cpp  KC_EntityManager.h  KC_EntitySet.cpp  KC_EntitySet.h  KC_Game.cpp  KC_Game.h  KC_GameManager.cpp  KC_GameManager.h  KC_GameSystem.h  KC_GameSystemProvider.cpp  KC_GameSystemProvider.h  KC_InitializeSpatialGridSystem.cpp  KC_InitializeSpatialGridSystem.h  (+58 more)
test/: CMakeLists.txt
test/src/: Test.KC_ComponentManager.cpp  Test.KC_EntitySet.cpp  Test.World.cpp  TestHelper.cpp  TestHelper.h
test/src/TestHelper/EntitySet/: CountMatcher.h  HasEntitiesMatcher.cpp  HasEntitiesMatcher.h  HasIntervalsMatcher.cpp  HasIntervalsMatcher.h
